gen/bigquerydatatransfer/v1/cargo-errors.log
    Checking google-bigquerydatatransfer1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/bigquerydatatransfer/v1/lib)
error[E0412]: cannot find type `ListStatesItems` in module `crate::resources::projects::locations::transfer_configs::runs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:5221:490
     |
5221 |                     pub struct ListRequestBuilder < 'a , A > { pub ( crate ) reqwest : & 'a :: reqwest :: Client , pub ( crate ) auth : & 'a :: std :: sync :: Mutex < A > , parent : String , page_size : Option < i32 > , page_token : Option < String > , run_attempt : Option < crate :: resources :: projects :: locations :: transfer_configs :: runs :: params :: ListRunAttempt > , states : Option < Vec < crate :: resources :: projects :: locations :: transfer_configs :: runs :: params :: ListStatesItems > > , access_token : Option < String > , alt : Option < crate :: params :: Alt > , callback : Option < String > , fields : Option < String > , key : Option < String > , oauth_token : Option < String > , pretty_print : Option < bool > , quota_user : Option < String > , upload_protocol : Option < String > , upload_type : Option < String > , xgafv : Option < crate :: params :: Xgafv > , }
     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ^^^^^^^^^^^^^^^ not found in `crate::resources::projects::locations::transfer_configs::runs::params`

error[E0412]: cannot find type `ListStatesItems` in module `crate::resources::projects::locations::transfer_configs::runs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:5244:140
     |
5244 |                             value : impl Into < Vec < crate :: resources :: projects :: locations :: transfer_configs :: runs :: params :: ListStatesItems > >,
     |                                                                                                                                            ^^^^^^^^^^^^^^^ not found in `crate::resources::projects::locations::transfer_configs::runs::params`

error[E0412]: cannot find type `ListMessageTypesItems` in module `crate::resources::projects::locations::transfer_configs::runs::transfer_logs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:5552:329
     |
5552 |                         pub struct ListRequestBuilder < 'a , A > { pub ( crate ) reqwest : & 'a :: reqwest :: Client , pub ( crate ) auth : & 'a :: std :: sync :: Mutex < A > , parent : String , message_types : Option < Vec < crate :: resources :: projects :: locations :: transfer_configs :: runs :: transfer_logs :: params :: ListMessageTypesItems > > , page_size : Option < i32 > , page_token : Option < String > , access_token : Option < String > , alt : Option < crate :: params :: Alt > , callback : Option < String > , fields : Option < String > , key : Option < String > , oauth_token : Option < String > , pretty_print : Option < bool > , quota_user : Option < String > , upload_protocol : Option < String > , upload_type : Option < String > , xgafv : Option < crate :: params :: Xgafv > , }
     |                                                                                                                                                                                                                                                                                                                                         ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::locations::transfer_configs::runs::transfer_logs::params`

error[E0412]: cannot find type `ListMessageTypesItems` in module `crate::resources::projects::locations::transfer_configs::runs::transfer_logs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:5557:161
     |
5557 |                                 value : impl Into < Vec < crate :: resources :: projects :: locations :: transfer_configs :: runs :: transfer_logs :: params :: ListMessageTypesItems > >,
     |                                                                                                                                                                 ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::locations::transfer_configs::runs::transfer_logs::params`

error[E0412]: cannot find type `ListStatesItems` in module `crate::resources::projects::transfer_configs::runs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:7851:460
     |
7851 |                 pub struct ListRequestBuilder < 'a , A > { pub ( crate ) reqwest : & 'a :: reqwest :: Client , pub ( crate ) auth : & 'a :: std :: sync :: Mutex < A > , parent : String , page_size : Option < i32 > , page_token : Option < String > , run_attempt : Option < crate :: resources :: projects :: transfer_configs :: runs :: params :: ListRunAttempt > , states : Option < Vec < crate :: resources :: projects :: transfer_configs :: runs :: params :: ListStatesItems > > , access_token : Option < String > , alt : Option < crate :: params :: Alt > , callback : Option < String > , fields : Option < String > , key : Option < String > , oauth_token : Option < String > , pretty_print : Option < bool > , quota_user : Option < String > , upload_protocol : Option < String > , upload_type : Option < String > , xgafv : Option < crate :: params :: Xgafv > , }
     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                            ^^^^^^^^^^^^^^^ not found in `crate::resources::projects::transfer_configs::runs::params`

error[E0412]: cannot find type `ListStatesItems` in module `crate::resources::projects::transfer_configs::runs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:7874:123
     |
7874 |                         value : impl Into < Vec < crate :: resources :: projects :: transfer_configs :: runs :: params :: ListStatesItems > >,
     |                                                                                                                           ^^^^^^^^^^^^^^^ not found in `crate::resources::projects::transfer_configs::runs::params`

error[E0412]: cannot find type `ListMessageTypesItems` in module `crate::resources::projects::transfer_configs::runs::transfer_logs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:8180:312
     |
8180 |                     pub struct ListRequestBuilder < 'a , A > { pub ( crate ) reqwest : & 'a :: reqwest :: Client , pub ( crate ) auth : & 'a :: std :: sync :: Mutex < A > , parent : String , message_types : Option < Vec < crate :: resources :: projects :: transfer_configs :: runs :: transfer_logs :: params :: ListMessageTypesItems > > , page_size : Option < i32 > , page_token : Option < String > , access_token : Option < String > , alt : Option < crate :: params :: Alt > , callback : Option < String > , fields : Option < String > , key : Option < String > , oauth_token : Option < String > , pretty_print : Option < bool > , quota_user : Option < String > , upload_protocol : Option < String > , upload_type : Option < String > , xgafv : Option < crate :: params :: Xgafv > , }
     |                                                                                                                                                                                                                                                                                                                        ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::transfer_configs::runs::transfer_logs::params`

error[E0412]: cannot find type `ListMessageTypesItems` in module `crate::resources::projects::transfer_configs::runs::transfer_logs::params`
    --> bigquerydatatransfer/v1/lib/src/lib.rs:8185:144
     |
8185 |                             value : impl Into < Vec < crate :: resources :: projects :: transfer_configs :: runs :: transfer_logs :: params :: ListMessageTypesItems > >,
     |                                                                                                                                                ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::transfer_configs::runs::transfer_logs::params`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-bigquerydatatransfer1`.

To learn more, run the command again with --verbose.
